# parallelism-theory

./: .gitignore  README.md
hw02/task2_1/: CMakeLists.txt  README.md  graph.py  speedup_data.txt  task2_1.cpp  test.out
hw02/task2_2/: CMakeLists.txt  README.md  graph.py  speedup_data.txt  task2_2.cpp  test.out
hw02/task2_3/: CMakeLists.txt  README.md  graph.py  slay_solver.cpp  speedup_data.txt  test.out
hw03/task3_1/: CMakeLists.txt  README.md  graph.py  rerun.py  speedup_data_averaged.txt
hw03/task3_2/: CMakeLists.txt  c1_sin.txt  c2_sqrt.txt  c3_pow.txt  main.cpp
hw04/: lab4_parallel.py
lab5/: lab5_camera.py  lab5_parallel.py
task_1/: CMakeLists.txt  README.md  task_1.cpp  test.c
